--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
         &nbsp;&nbsp;&nbsp;本網站為靜態網站，不回傳任何資訊到後端，網站作者：Astria 「https://github.com/WWW5911」、「https://www.astriaworks.moe/」；contact@astriaworks.moe。
         <br>
         &nbsp;&nbsp;&nbsp;背景來源：URL：http://loo.sakura.ne.jp/index.html；サイト名：空彩；管理人：ツジキ
+        <!--カウンター画像からは配布サイトへリンクが設定されています。また、誤作動、誤表示の原因となりますのでコードの改変、改行は行わないで下さい。
+このコメント部分は削除して頂いても結構です。-->
+<a href="https://www.stylemap.co.jp/"><img src="https://www.f-counter.net/j/63/1711641038/" alt="アクセスカウンター"></a>
+
     </div>
     <script src="js/calculater.js"></script>
     <script>
